--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ jobs:
 
     - stage: magento2
       env:
-        - MAGENTO2_BUILDS="2.[1].[1]:latest 2.[1-3].[1]:2.[1-3] 2.[1-2].[2-5]"
+        - MAGENTO2_BUILDS="2.[1].[1]:latest 2.[1-3].[1]:2.[1-3] 2.[1-2].[2-5] 2.4.[0-9]"
       script:
         - versions=$(scripts/versions.sh git://github.com/magento/magento2 $MAGENTO2_BUILDS)
         - scripts/build.sh --publish magento2 $versions
